@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-30T08:08:30Z",
-  "count_outdated" : 4,
-  "uniques_outdated" : 1,
-  "count" : 30,
-  "uniques" : 10,
+  "timestamp" : "2022-04-30T16:08:18Z",
+  "count_outdated" : 20,
+  "uniques_outdated" : 3,
+  "count" : 45,
+  "uniques" : 11,
   "views" : [
-    {
-      "timestamp": "2022-04-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 16 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 2 ]
-    },
     {
       "timestamp": "2022-04-19T00:00:00Z",
       "count": 9,
