@@ -1,12 +1,7 @@
 {
-  "count": 26,
+  "count": 25,
   "uniques": 7,
   "views": [
-    {
-      "timestamp": "2022-04-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-19T00:00:00Z",
       "count": 9,
